by the power of find and replace, add writer and director fields

--- a/episodes/season_01.yml
+++ b/episodes/season_01.yml
@@ -4,6 +4,8 @@ episodes:
   season: 1
   episode: 1
   release_date: 1989-12-17
+  directors:
+  writers:
   description: Homer decides to gamble on a "hunch" at the dog track when his annual
     Christmas bonus is canceled.
   disneyplus_id: 79529cd0-f1cf-4eec-8b1d-ea1e1b76043b
@@ -14,6 +16,8 @@ episodes:
   season: 1
   episode: 2
   release_date: 1990-01-14
+  directors:
+  writers:
   description: Bart is believed to be a genius after he switches I.Q. tests with brainy
     Martin Prince.
   disneyplus_id: 250ca502-751e-4b37-a465-f8b518d76ced
@@ -24,6 +28,8 @@ episodes:
   season: 1
   episode: 3
   release_date: 1990-01-21
+  directors:
+  writers:
   description: Fired from his job at the Nuclear Power Plant, Homer decides to embark
     on a campaign to make all of Springfield safer.
   disneyplus_id: 0e8e7f27-0ab2-495f-8254-d99d3c53ce4f
@@ -34,6 +40,8 @@ episodes:
   season: 1
   episode: 4
   release_date: 1990-01-28
+  directors:
+  writers:
   description: After attending the annual company picnic, Homer becomes jealous of
     fellow employees with 'normal' families.  He decides to enlist the aid of psychologist
     Marvin Monroe to treat his wife and children.
@@ -45,6 +53,8 @@ episodes:
   season: 1
   episode: 5
   release_date: 1990-02-04
+  directors:
+  writers:
   description: Grandpa Simpson aids Bart in his war against a school bully and his
     gang.
   disneyplus_id: 051c32fc-0d9a-4bee-a960-9c6ab85eccdb
@@ -55,6 +65,8 @@ episodes:
   season: 1
   episode: 6
   release_date: 1990-02-11
+  directors:
+  writers:
   description: Lisa befriends a saxophone player when she develops a case of the blues.
   disneyplus_id: d7502c3a-a254-451a-bdc0-b57e67b1ace4
   simpsonsworld_id: 273391683535
@@ -64,6 +76,8 @@ episodes:
   season: 1
   episode: 7
   release_date: 1990-02-18
+  directors:
+  writers:
   description: Homer is mistaken for Bigfoot when he takes his family on a trip into
     the wilderness in their new camper.
   disneyplus_id: 8d4aad23-2222-4980-af9b-729bc8159898
@@ -74,6 +88,8 @@ episodes:
   season: 1
   episode: 8
   release_date: 1990-02-25
+  directors:
+  writers:
   description: Bart attempts to impress his new friends by vandalizing a statue of
     the town's founding father, Jebediah Springfield.
   disneyplus_id: 8868eddb-224d-4df4-93c2-145abd60270d
@@ -84,6 +100,8 @@ episodes:
   season: 1
   episode: 9
   release_date: 1990-03-18
+  directors:
+  writers:
   description: Marge contemplates having an affair with a local womanizer after Homer
     selfishly buys her a bowling ball for her birthday.
   disneyplus_id: 6303b4c8-5e65-46a0-bd51-6460bba86e8e
@@ -94,6 +112,8 @@ episodes:
   season: 1
   episode: 10
   release_date: 1990-03-25
+  directors:
+  writers:
   description: Bart photographs Homer with belly-dancer Princess Kashmir.  Marge will
     only forgive her husband when he proves to Bart that all women are not merely
     sexual objects.
@@ -105,6 +125,8 @@ episodes:
   season: 1
   episode: 11
   release_date: 1990-04-15
+  directors:
+  writers:
   description: To Homer's delight, Bart is sent to France for the summer as part of
     a student exchange program.
   disneyplus_id: 01937c40-fe95-4e8f-aa0d-3933ee3ba378
@@ -115,6 +137,8 @@ episodes:
   season: 1
   episode: 12
   release_date: 1990-04-29
+  directors:
+  writers:
   description: When Homer positively identifies Krusty the Clown as an armed robber,
     Bart attempts to clear his idol's name.
   disneyplus_id: 829bc530-f7b3-459d-bac1-dc92672c9138
@@ -125,6 +149,8 @@ episodes:
   season: 1
   episode: 13
   release_date: 1990-05-13
+  directors:
+  writers:
   description: Marge and Homer unwittingly leave their children in the care of a villainous
     babysitter when they attempt to rekindle their marriage.
   disneyplus_id: 332f91c5-2de7-40d2-ac02-9de76820f4f6
