--- a/episodes/season_07.yml
+++ b/episodes/season_07.yml
@@ -4,6 +4,8 @@ episodes:
   season: 7
   episode: 1
   release_date:
+  directors:
+  writers:
   description: Lisa aids police with the investigation of the Burns shooting.
   disneyplus_id: af6bd0ea-9f03-4291-9224-de834958b1a1
   simpsonsworld_id: 305689667892
@@ -13,6 +15,8 @@ episodes:
   season: 7
   episode: 2
   release_date:
+  directors:
+  writers:
   description: Hollywood producers cast Milhouse in a motion picture based on the
     popular "Radioactive Man" comic books.
   disneyplus_id: 2895e8ae-b98c-43e8-8da0-8015832768f6
@@ -23,6 +27,8 @@ episodes:
   season: 7
   episode: 3
   release_date:
+  directors:
+  writers:
   description: The Flanders gain custody of the Simpson children after welfare workers
     accuse Homer and Marge of being negligent parents.
   disneyplus_id: 85ae1888-ba11-43e6-a617-badff0685aad
@@ -33,6 +39,8 @@ episodes:
   season: 7
   episode: 4
   release_date:
+  directors:
+  writers:
   description: Bart sells his soul to Milhouse for five dollars.  Moe transforms his
     bar into a family restaurant.
   disneyplus_id: 9168c65f-2ea7-46de-aef9-14c518a5f597
@@ -43,6 +51,8 @@ episodes:
   season: 7
   episode: 5
   release_date:
+  directors:
+  writers:
   description: Lisa turns vegetarian after her family visits a petting zoo.
   disneyplus_id: 18076697-c44b-4d5d-a4cd-e12fe07b924e
   simpsonsworld_id: 276980291592
@@ -52,6 +62,8 @@ episodes:
   season: 7
   episode: 6
   release_date:
+  directors:
+  writers:
   description: The Simpsons appear in three horrifying Halloween tales.
   disneyplus_id: 384c7808-cd8f-4908-a095-c3fedf955d37
   simpsonsworld_id: 310404163601
@@ -61,6 +73,8 @@ episodes:
   season: 7
   episode: 7
   release_date:
+  directors:
+  writers:
   description: Homer intentionally gains weight so he can qualify for disability and
     work at home.
   disneyplus_id: 3da929b8-51d7-483b-8007-540faa742efa
@@ -71,6 +85,8 @@ episodes:
   season: 7
   episode: 8
   release_date:
+  directors:
+  writers:
   description: After Homer fakes his own death, his long-thought-deceased mother arrives
     in Springfield to pay her last respects.
   disneyplus_id: 79177d82-52a3-42e0-9f1a-74bebdb70a3b
@@ -81,6 +97,8 @@ episodes:
   season: 7
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Sideshow Bob threatens to detonate a nuclear bomb unless television
     is abolished.
   disneyplus_id: dd578c4e-b966-4039-9154-c49ebfc3fcc7
@@ -91,6 +109,8 @@ episodes:
   season: 7
   episode: 10
   release_date:
+  directors:
+  writers:
   description: Troy McClure hosts this special 138th episode, which includes the first-ever
     cartoon shorts, trivia questions, and never-before-seen footage.
   disneyplus_id: bf91c3f9-c130-4b40-9c0a-d106bee437da
@@ -101,6 +121,8 @@ episodes:
   season: 7
   episode: 11
   release_date:
+  directors:
+  writers:
   description: As Christmas approaches, Marge treats Bart like an adult after he is
     caught shoplifting.
   disneyplus_id: c75d20a0-48e3-4e3f-b420-51b13527decf
@@ -111,6 +133,8 @@ episodes:
   season: 7
   episode: 12
   release_date:
+  directors:
+  writers:
   description: Homer reluctantly accepts Mr. Burns into his new bowling league.  Bart
     causes a student riot by wearing a Mad magazine iron-on prompting Skinner to implement
     a school dress code.
@@ -122,6 +146,8 @@ episodes:
   season: 7
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Former President George Bush and his wife Barbara buy a house across
     the street from the Simpsons.
   disneyplus_id: 6d3f90dd-4441-4a21-873b-2b856aae503c
@@ -132,6 +158,8 @@ episodes:
   season: 7
   episode: 14
   release_date:
+  directors:
+  writers:
   description: The Simpsons apply for membership at a posh country club.
   disneyplus_id: 69f3b82f-c910-4c58-a378-cc18fe23587a
   simpsonsworld_id: 305694276001
@@ -141,6 +169,8 @@ episodes:
   season: 7
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Krusty is arrested for massive tax fraud after Bart inadvertently exposes
     his hero's illegal bank account.
   disneyplus_id: 22adc89c-f2e8-4380-9d96-bd10defc0ddd
@@ -151,6 +181,8 @@ episodes:
   season: 7
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Lisa discovers that Jebediah Springfield was a vicious pirate. Homer
     wins the coveted role of town crier in an upcoming parade.
   disneyplus_id: 3c98cfc8-ba9f-4dd9-8fdf-9bc0f5f63b8f
@@ -161,6 +193,8 @@ episodes:
   season: 7
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Homer acts as Mr. Burns' assistant while Smithers is away on vacation.
   disneyplus_id: c2fc5c37-1407-47bc-a71a-a6fa30688127
   simpsonsworld_id: 277248579634
@@ -170,6 +204,8 @@ episodes:
   season: 7
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Bart and Lisa come to the aid of a down-and-out man who claims to have
     invented the concept of cartoon violence.
   disneyplus_id: cdf89f39-7954-4823-bd0f-e59a508cfd84
@@ -180,6 +216,8 @@ episodes:
   season: 7
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Troy McClure stages a Hollywood comeback when he begins dating Selma.
   disneyplus_id: d479707a-067a-49c9-a707-1360c0e001e1
   simpsonsworld_id: 300935235544
@@ -189,6 +227,8 @@ episodes:
   season: 7
   episode: 20
   release_date:
+  directors:
+  writers:
   description: Using a fake driver's license, Bart rents a car and embarks on a Spring
     Break road trip with his friends.  A special bond develops between Lisa and Homer
     after Skinner invents Go To Work With Your Parents Day.
@@ -200,6 +240,8 @@ episodes:
   season: 7
   episode: 21
   release_date:
+  directors:
+  writers:
   description: The lives of Springfield residents are highlighted in a series of interconnecting
     vignettes.
   disneyplus_id: 7a4eea69-f6f0-4361-a043-0282f15c365a
@@ -211,6 +253,8 @@ episodes:
   season: 7
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Grampa and Mr. Burns, the last surviving members of a World War II
     army unit, vie for a priceless collection of rare art hidden in a secret location.
   disneyplus_id: 83a53166-960e-4b09-808c-93e6556722bd
@@ -221,6 +265,8 @@ episodes:
   season: 7
   episode: 23
   release_date:
+  directors:
+  writers:
   description: Apu faces deportation when a referendum on illegal immigrants is placed
     on the Springfield ballot.
   disneyplus_id: 1195725c-d1c9-4ff1-bd37-0c652fda5309
@@ -231,6 +277,8 @@ episodes:
   season: 7
   episode: 24
   release_date:
+  directors:
+  writers:
   description: Homer is hired to perform in a rock festival.
   disneyplus_id: 75b8b572-9e2d-40b5-8424-5b943d15fd75
   simpsonsworld_id: 277008451637
@@ -240,6 +288,8 @@ episodes:
   season: 7
   episode: 25
   release_date:
+  directors:
+  writers:
   description: While on summer vacation with her family, Lisa sheds her nerdy image
     in an effort to make new friends.
   disneyplus_id: 964b876c-efaa-483f-bf8b-047187608d95
