--- a/episodes/season_15.yml
+++ b/episodes/season_15.yml
@@ -4,6 +4,8 @@ episodes:
   season: 15
   episode: 1
   release_date:
+  directors:
+  writers:
   description: On Halloween, Homer takes over for the Grim Reaper and discovers Marge's
     name on his list; Professor Frink reanimates his father's corpse; Bart and Milhouse
     play pranks with a watch that can stop time.
@@ -15,6 +17,8 @@ episodes:
   season: 15
   episode: 2
   release_date:
+  directors:
+  writers:
   description: Mother Simpson is captured by police and placed on trial for sabotaging
     Mr. Burns' germ warfare plant in the 1960s.  Homer's heartfelt testimony helps
     win her release... but Mr. Burns concocts a plot to get revenge.
@@ -26,6 +30,8 @@ episodes:
   season: 15
   episode: 3
   release_date:
+  directors:
+  writers:
   description: When Lisa is elected student body president, she vows to make the school
     a better place to learn.  But Skinner tricks her into cutting well-liked programs...
     prompting Lisa to call a general student strike.
@@ -37,6 +43,8 @@ episodes:
   season: 15
   episode: 4
   release_date:
+  directors:
+  writers:
   description: The Simpsons travel to England, where Homer is imprisoned in the Tower
     of London after he smashes a car into the Queen's royal coach.
   disneyplus_id: c0e74b7a-439f-4a6a-97c4-2fa2b8a77468
@@ -47,6 +55,8 @@ episodes:
   season: 15
   episode: 5
   release_date:
+  directors:
+  writers:
   description: Homer becomes the laughing stock of the town when a wild bear humiliates
     him.  But when he seeks a rematch, Homer bonds with the animal and tries to save
     its life.
@@ -58,6 +68,8 @@ episodes:
   season: 15
   episode: 6
   release_date:
+  directors:
+  writers:
   description: When Krusty takes the Sabbath off so he can study for his bar mitzvah,
     he chooses Homer as temporary guest host.  But when Homer's career unexpectedly
     takes off, Krusty finds himself out of a job.
@@ -69,6 +81,8 @@ episodes:
   season: 15
   episode: 7
   release_date:
+  directors:
+  writers:
   description: As Christmas approaches, Homer discovers the true meaning of the season
     after watching an animated version of A Christmas Carol on television.  But Flanders
     find it impossible to live as the second-nicest-guy in town.
@@ -80,6 +94,8 @@ episodes:
   season: 15
   episode: 8
   release_date:
+  directors:
+  writers:
   description: Marge opposes a political group made up of childless people who've
     grown fed-up with accommodating people with families.
   disneyplus_id: 2eee17ee-617a-4353-8ea8-d8a462a05664
@@ -90,6 +106,8 @@ episodes:
   season: 15
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Homer builds a fighting robot for Bart, but finds he must hide inside
     the device to make it work; Lisa searches for a replacement for Snowball II when
     the cat is run over by a car.
@@ -101,6 +119,8 @@ episodes:
   season: 15
   episode: 10
   release_date:
+  directors:
+  writers:
   description: Homer buys an ambulance and starts responding to medical emergencies;
     Marge authors her own romance novel.
   disneyplus_id: 80fa3f3a-1fa9-46a3-922d-06e3f1cdfc55
@@ -111,6 +131,8 @@ episodes:
   season: 15
   episode: 11
   release_date:
+  directors:
+  writers:
   description: 'Marge tells the children three historical tales: the story of King
     Henry the Eighth and his quest for a son; Sacagawea''s journey with Lewis and
     Clark; and the rivalry between Mozart and Salieri.'
@@ -122,6 +144,8 @@ episodes:
   season: 15
   episode: 12
   release_date:
+  directors:
+  writers:
   description: When Milhouse and his mother relocate to Capital City, Bart strikes
     up a friendship with Lisa; Homer makes money by pretending to be a transient.
   disneyplus_id: 7528e5f7-8bf0-4c91-bedb-2305c37a868a
@@ -132,6 +156,8 @@ episodes:
   season: 15
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Lisa searches for a new identity when baby Maggie turns out to be smarter
     than her.
   disneyplus_id: 1139d006-99a7-48f6-9f52-fdebfaac820d
@@ -142,6 +168,8 @@ episodes:
   season: 15
   episode: 14
   release_date:
+  directors:
+  writers:
   description: Homer becomes the majority shareholder of Artie Ziff's troubled Internet
     company-and ends up being arrested by the Securities and Exchange Commission.
   disneyplus_id: 82113640-5626-4a70-822c-f8f608aa869d
@@ -152,6 +180,8 @@ episodes:
   season: 15
   episode: 15
   release_date:
+  directors:
+  writers:
   description: When a drunken Homer loses control of his car, he places an unconscious
     Marge in the driver's seat so she'll be blamed for the accident; Lisa and Bart
     complain to the creator of the Cosmic Wars saga about his latest films.
@@ -163,6 +193,8 @@ episodes:
   season: 15
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Bart's latest prank lands him in juvenile prison, where a tough girl
     forces him to go on the lam.
   disneyplus_id: 6fc62065-18ae-4751-a441-f8f1fe016693
@@ -173,6 +205,8 @@ episodes:
   season: 15
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Mrs. Krabappel dumps Principal Skinner at the altar and has a passionate
     affair with the Comic Book Guy.
   disneyplus_id: 6a0af6db-2725-4782-bf06-813dbfe5cbfa
@@ -183,6 +217,8 @@ episodes:
   season: 15
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Bart and Lisa pursue Homer and Marge after they sneak away on a second
     honeymoon; Grampa catches the eye of a dashing Cuban man.
   disneyplus_id: 91fa3c12-3d04-473c-9641-d371e41d0bc7
@@ -193,6 +229,8 @@ episodes:
   season: 15
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Homer confronts evildoers in the form of his crime-fighting alter ego,
     the Pie Man-until Mr. Burns blackmails him into throwing a pie at the Dalai Lama.
   disneyplus_id: d4bd306d-4700-4d5d-bfa6-9987b68ec982
@@ -203,6 +241,8 @@ episodes:
   season: 15
   episode: 20
   release_date:
+  directors:
+  writers:
   description: Homer reveals that Marge wasn't the first girl he ever kissed, but
     as he and Marge recount their versions of time spent at a summer camp, Homer realizes
     he caused Marge thirty years of heartbreak.
@@ -214,6 +254,8 @@ episodes:
   season: 15
   episode: 21
   release_date:
+  directors:
+  writers:
   description: The Simpsons are thrown in prison after Bart accidentally moons the
     American flag.
   disneyplus_id: 88247ea9-a5dd-4a76-9b27-57c807db9116
@@ -224,6 +266,8 @@ episodes:
   season: 15
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Mr. Burns buys up all the media outlets in Springfield in an effort
     to polish his image, but soon finds himself at odds with Lisa, who started publishing
     her own newspaper.
