--- a/episodes/season_17.yml
+++ b/episodes/season_17.yml
@@ -4,6 +4,8 @@ episodes:
   season: 17
   episode: 1
   release_date:
+  directors:
+  writers:
   description: When Homer allows the mob to film a pornographic movie at the house,
     a disgusted Marge leaves the family and hooks up with a doctor trying to save
     the lives of manatees.
@@ -15,6 +17,8 @@ episodes:
   season: 17
   episode: 2
   release_date:
+  directors:
+  writers:
   description: Lisa must confront her darkest fears after a cemetery is relocated
     to the Simpsons' neighborhood.
   disneyplus_id: 49f07704-d9ac-47e6-aa12-0a30eaf32f6e
@@ -25,6 +29,8 @@ episodes:
   season: 17
   episode: 3
   release_date:
+  directors:
+  writers:
   description: After Kirk and Luann rekindle their relationship, Bart and Milhouse
     plot to end the romance... only to inadvertently cause Homer and Marge to break
     up instead.
@@ -36,6 +42,8 @@ episodes:
   season: 17
   episode: 4
   release_date:
+  directors:
+  writers:
   description: On Halloween, Bart is replaced by a robotic boy after he falls into
     a coma; Burns hunts down Homer in a most dangerous game; a witch transforms trick-or-treaters
     into the costumes they're wearing.
@@ -47,6 +55,8 @@ episodes:
   season: 17
   episode: 5
   release_date:
+  directors:
+  writers:
   description: After spending time with her son, Marge begins to worry that she's
     turning Bart into a momma's boy; Homer enters an arm-wrestling competition.
   disneyplus_id: 4f23394a-acfe-44da-9638-6c91de330635
@@ -57,6 +67,8 @@ episodes:
   season: 17
   episode: 6
   release_date:
+  directors:
+  writers:
   description: After winning popularity as the Safety Salamander, Homer challenges
     Quimby during a special mayoral recall election.
   disneyplus_id: e583a0f5-1ec6-430e-aca2-d8872a2a62a7
@@ -67,6 +79,8 @@ episodes:
   season: 17
   episode: 7
   release_date:
+  directors:
+  writers:
   description: A lonely Marge joins a women's group; Milhouse teaches Lisa how to
     speak Italian.
   disneyplus_id: b1c183c4-3596-488d-a69f-e009a0b9a052
@@ -77,6 +91,8 @@ episodes:
   season: 17
   episode: 8
   release_date:
+  directors:
+  writers:
   description: The Simpsons travel to Italy to retrieve Mr. Burn's expensive new sports
     car... only to encounter Sideshow Bob and his murderous family.
   disneyplus_id: 33c8bd72-9107-4de1-943b-a3e9e4f02fe8
@@ -87,6 +103,8 @@ episodes:
   season: 17
   episode: 9
   release_date:
+  directors:
+  writers:
   description: 'The Simpsons appear in three Christmas tales: the story of the birth
     of Jesus; a World War II tale featuring Grampa, Mr. Burns and Santa; and a musical
     featuring The Nutcracker suite.'
@@ -98,6 +116,8 @@ episodes:
   season: 17
   episode: 10
   release_date:
+  directors:
+  writers:
   description: When an old letter is delivered to the Simpson home, Homer comes to
     believe that Grampa isn't his biological father after all.
   disneyplus_id: 5076a95f-afa6-46d1-8e57-91577a8220cf
@@ -108,6 +128,8 @@ episodes:
   season: 17
   episode: 11
   release_date:
+  directors:
+  writers:
   description: After Bart gets into trouble at school, Homer drives Bart to Oregon,
     where he attends a behavior modification camp; Marge becomes a popular drug dealer
     after she sells Homer's pain medications during a yard sale.
@@ -119,6 +141,8 @@ episodes:
   season: 17
   episode: 12
   release_date:
+  directors:
+  writers:
   description: Lisa vows to turn Groundskeeper Willie into a 'proper gentleman' in
     time for the upcoming school science fair; Homer tries to find something to wear
     after he rips his favorite blue pants.
@@ -130,6 +154,8 @@ episodes:
   season: 17
   episode: 13
   release_date:
+  directors:
+  writers:
   description: When the Simpsons become trapped inside a cave, Lisa recounts a story
     involving a bag of gold coins and how it affected the lives of Mr. Burns, Moe
     and Homer.
@@ -141,6 +167,8 @@ episodes:
   season: 17
   episode: 14
   release_date:
+  directors:
+  writers:
   description: Marge teaches Rod and Todd Flanders how to have fun; a lonely chimpanzee
     grabs hold of Bart.
   disneyplus_id: f0ba9823-f753-4fde-b3c3-597e098037c1
@@ -151,6 +179,8 @@ episodes:
   season: 17
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Marge swaps places with a British wife after the Simpsons become contestants
     on a reality television show.
   disneyplus_id: c76182bf-8018-4817-bebe-6f6e97fd95c1
@@ -161,6 +191,8 @@ episodes:
   season: 17
   episode: 16
   release_date:
+  directors:
+  writers:
   description: After costing Springfield a professional football team, Grampa tries
     to end his life, but the experience changes him, and he ends up becoming a matador.
   disneyplus_id: f06f1cc0-dad5-43ca-95f6-bd312cf3447c
@@ -171,6 +203,8 @@ episodes:
   season: 17
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Mr. Burns closes the nuclear power plant and outsources all the jobs,
     forcing Homer to relocate to India; MacGyver fans Patty and Selma kidnap actor
     Richard Dean Anderson.
@@ -182,6 +216,8 @@ episodes:
   season: 17
   episode: 18
   release_date:
+  directors:
+  writers:
   description: 'The Simpsons appear in three stories set at sea: the journey of The
     Mayflower, the mutiny on The Bounty, and the capsizing of a cruise ship.'
   disneyplus_id: 45d552e0-f659-47d7-a211-af7feff50ed0
@@ -192,6 +228,8 @@ episodes:
   season: 17
   episode: 19
   release_date:
+  directors:
+  writers:
   description: After Skinner is fired for insinuating that girls are inferior to boys
     in math, Springfield Elementary is split into two groups-boys and girls-forcing
     Lisa to dress up like a boy so she can attend a math class.
@@ -203,6 +241,8 @@ episodes:
   season: 17
   episode: 20
   release_date:
+  directors:
+  writers:
   description: After Marge develops amnesia and can't remember anything about Homer,
     she decides to kick him out of the house and see other people.
   disneyplus_id: 7ebe927e-566b-41b5-9625-ba9600ceb5b5
@@ -213,6 +253,8 @@ episodes:
   season: 17
   episode: 21
   release_date:
+  directors:
+  writers:
   description: Lisa protests when Springfield passes a law requiring that creationism
     be taught alongside evolution in public schools.
   disneyplus_id: 8d55f57f-97da-4a15-a0b2-57d6ce59bc29
@@ -223,6 +265,8 @@ episodes:
   season: 17
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Homer and Marge play marriage counselors to help a baseball player
     and his sexy recording artist-wife.
   disneyplus_id: 81f1ff3f-741e-4677-9c71-628b4851dbf6
