--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -4,6 +4,8 @@ episodes:
   season: 19
   episode: 1
   release_date:
+  directors:
+  writers:
   description: Marge hires a life coach to turn Homer around after he becomes convinced
     he's nothing but a loser.
   disneyplus_id: cfb4a65d-9894-49a4-a3cd-8a69d5d2e27e
@@ -14,6 +16,8 @@ episodes:
   season: 19
   episode: 2
   release_date:
+  directors:
+  writers:
   description: Homer becomes an opera star, only to find himself the target of an
     obsessed fan.
   disneyplus_id: 29d746b8-c00f-4017-a385-e7439147f115
@@ -24,6 +28,8 @@ episodes:
   season: 19
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Homer makes enemies when he starts his own tow truck business; Marge
     hires outside help to make Maggie more independent.
   disneyplus_id: 3aabd561-93f2-4cab-acdf-c2e8f4adc3f8
@@ -34,6 +40,8 @@ episodes:
   season: 19
   episode: 4
   release_date:
+  directors:
+  writers:
   description: Marge fears for her safety after breaking a promise to a bank robber
     about visiting him in jail.
   disneyplus_id: f5ba0aac-38a1-41f2-a749-87292f0f6ec8
@@ -44,6 +52,8 @@ episodes:
   season: 19
   episode: 5
   release_date:
+  directors:
+  writers:
   description: 'In three tales of Halloween terror: Homer and Marge attempt to eliminate
     one another after discovering their secret identities; Bart and Lisa aid Kodos
     the space alien; Flanders uses the seven deadly sins to punish Bart.'
@@ -55,6 +65,8 @@ episodes:
   season: 19
   episode: 6
   release_date:
+  directors:
+  writers:
   description: When his parents are lost at sea and presumed dead, Milhouse becomes
     cooler than Bart; Homer finds himself in hot water when he can't remember the
     color of Marge's eyes.
@@ -66,6 +78,8 @@ episodes:
   season: 19
   episode: 7
   release_date:
+  directors:
+  writers:
   description: After Marge launches a gym for 'regular women' and becomes a successful
     businessperson, Homer decides to have his stomach stapled so she'll find him more
     attractive.
@@ -77,6 +91,8 @@ episodes:
   season: 19
   episode: 8
   release_date:
+  directors:
+  writers:
   description: After another of his attempts to kill the Simpsons is foiled, Sideshow
     Bob is put on trial.  During the proceedings, Bart accidentally kills his old
     nemesis.
@@ -88,6 +104,8 @@ episodes:
   season: 19
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Homer wakes up from a blackout only to discover that Marge and the
     kids have left him.  Using a variety of methods, he probes his memory to unravel
     the mystery.
@@ -99,6 +117,8 @@ episodes:
   season: 19
   episode: 10
   release_date:
+  directors:
+  writers:
   description: 'When Springfield becomes the first city in the nation to hold a presidential
     primary, voters to turn the one person they can trust: Ralph Wiggum.'
   disneyplus_id: 04b3942a-b531-45e1-820c-c8b1447affd9
@@ -109,6 +129,8 @@ episodes:
   season: 19
   episode: 11
   release_date:
+  directors:
+  writers:
   description: Marge and Homer recount how Marge almost fell in love with a college
     professor during the 1990s.
   disneyplus_id: 496a92e0-6d0f-4b93-874a-6466ceb46185
@@ -119,6 +141,8 @@ episodes:
   season: 19
   episode: 12
   release_date:
+  directors:
+  writers:
   description: 'When Homer and Marge become trapped in a tunnel of love, three Valentine''s
     Day stories unfold: Bonnie and Clyde steal each other''s hearts; a take-off on
     ''Lady and the Tramp''; punk rockers Lisa and Nelson are hooked on sweets.'
@@ -130,6 +154,8 @@ episodes:
   season: 19
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Bart befriends a new kid at school, unaware that he's a snitch; after
     his car is damaged in an accident, Homer ends up with a fancy loaner.
   disneyplus_id: 6ec0564f-066c-4db8-9c0b-525fb045760c
@@ -140,6 +166,8 @@ episodes:
   season: 19
   episode: 14
   release_date:
+  directors:
+  writers:
   description: Bart and Lisa think they killed Martin Prince; Marge enlists the help
     of a reality TV show after Homer cheats on his diet.
   disneyplus_id: acde483e-f4e3-45f8-b751-cb9096b35221
@@ -150,6 +178,8 @@ episodes:
   season: 19
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Lisa becomes addicted to secondhand smoke when she joins a ballet academy;
     Homer befriends raccoons who stole his beef jerky.
   disneyplus_id: 811e0263-04e6-439d-b44d-b5e8ed1b40bd
@@ -160,6 +190,8 @@ episodes:
   season: 19
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Marge and Homer aid country singer Lurleen Lumpkin by reuniting her
     with her deadbeat father.
   disneyplus_id: 59529fea-4dd3-40fb-82ba-f6fac7ae816a
@@ -170,6 +202,8 @@ episodes:
   season: 19
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Bart is overjoyed when the calf he's raising is judged Best in Show
     - until he realizes the animal is going to be slaughtered.
   disneyplus_id: 1a63a3b9-4b72-4e3f-80d8-bf00d962ab72
@@ -180,6 +214,8 @@ episodes:
   season: 19
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Lisa's documentary about life with the Simpsons is accepted into Sundance,
     but Lisa's initial elation turns to horror when festival-goers begin humiliating
     her dysfunctional family.
@@ -191,6 +227,8 @@ episodes:
   season: 19
   episode: 19
   release_date:
+  directors:
+  writers:
   description: When Homer's mother returns to Springfield, she asks Homer for his
     forgiveness.
   disneyplus_id: 6b46ca89-e6d0-43d8-8e18-cab6a8c392b4
@@ -201,6 +239,8 @@ episodes:
   season: 19
   episode: 20
   release_date:
+  directors:
+  writers:
   description: Krusty hires Lisa to be his intern, but she's so good at the job, she
     ends up replacing him as host of his show; Bart and Homer discover the world of
     coin collecting.
