--- a/episodes/season_20.yml
+++ b/episodes/season_20.yml
@@ -4,6 +4,8 @@ episodes:
   season: 20
   episode: 1
   release_date:
+  directors:
+  writers:
   description: Homer and Flanders team-up as bounty hunters; Marge makes confections
     for an erotic bakery.
   disneyplus_id: b41e3be6-a769-407d-a3fc-a277e56801f3
@@ -14,6 +16,8 @@ episodes:
   season: 20
   episode: 2
   release_date:
+  directors:
+  writers:
   description: When Bart steals actor Denis Leary's cell phone, Marge uses its built-in
     GPS signal to track her son... leading the family to the ancient ruins of Machu
     Picchu.
@@ -25,6 +29,8 @@ episodes:
   season: 20
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Bart swaps places with his exact double-unaware that the double's wealthy
     siblings are plotting murder.
   disneyplus_id: 37918594-db18-449e-a6cc-d82abf914a4b
@@ -35,6 +41,8 @@ episodes:
   season: 20
   episode: 4
   release_date:
+  directors:
+  writers:
   description: On Halloween... Transformer-like robots duke it out in Springfield;
     Homer kills off celebrities so their likenesses can be exploited; the Simpsons
     appear in a spoof of a 'Peanuts' Halloween special.
@@ -46,6 +54,8 @@ episodes:
   season: 20
   episode: 5
   release_date:
+  directors:
+  writers:
   description: In a series of flashbacks... Homer and Marge end up in a cabin in the
     woods with newlyweds Flanders and Maude; Homer and Marge's marriage is nearly
     ruined when they meet exciting new people during a party.
@@ -57,6 +67,8 @@ episodes:
   season: 20
   episode: 6
   release_date:
+  directors:
+  writers:
   description: When Lisa discovers a talent for solving crossword puzzles, she enters
     a crossword tournament-unaware that Homer bet against her.
   disneyplus_id: 52d5c4bb-bc9c-4463-862a-2b241726510f
@@ -67,6 +79,8 @@ episodes:
   season: 20
   episode: 7
   release_date:
+  directors:
+  writers:
   description: Homer thinks Bart's new Muslim friend belongs to a family of terrorists;
     Lisa acquires her first iPod-like device.
   disneyplus_id: 04436cd4-2791-45a4-b513-1e436dcec79b
@@ -77,6 +91,8 @@ episodes:
   season: 20
   episode: 8
   release_date:
+  directors:
+  writers:
   description: As Lisa tries to find a habitat for endangered bees, Mr. Burns builds
     a state-of-the-art sports arena-which happens to look like a giant hive.
   disneyplus_id: eff7ae0c-3a24-4a1d-af82-ca8771821789
@@ -87,6 +103,8 @@ episodes:
   season: 20
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Lisa's new best friend creates a fantasy world so real it threatens
     to drive them apart.
   disneyplus_id: 68ee0aa3-11db-4692-9bca-d8f8601c3a5a
@@ -97,6 +115,8 @@ episodes:
   season: 20
   episode: 10
   release_date:
+  directors:
+  writers:
   description: When Homer discovers that he was almost elected class president in
     high school, an old Italian cook uses a magic pot of tomato sauce to show him
     an alternate version of his life.
@@ -108,6 +128,8 @@ episodes:
   season: 20
   episode: 11
   release_date:
+  directors:
+  writers:
   description: Lisa freezes during a federal school assessment test; Homer tries to
     prevent accidents from happening after he forgets to pay an insurance bill; Skinner
     accompanies Bart and other underachievers on a trip to Capital City.
@@ -119,6 +141,8 @@ episodes:
   season: 20
   episode: 12
   release_date:
+  directors:
+  writers:
   description: When Homer and Marge's adjustable mortgage rate skyrockets, they're
     forced to move out of the house... until Flanders purchases the property and becomes
     their landlord.
@@ -130,6 +154,8 @@ episodes:
   season: 20
   episode: 13
   release_date:
+  directors:
+  writers:
   description: In this 'National Treasure'-like story... when Maggie disappears at
     a convent, Lisa goes undercover as a nun to solve a mystery involving a rare jewel.
   disneyplus_id: 7142d0eb-2815-4108-b9d6-af8624dc2ab1
@@ -140,6 +166,8 @@ episodes:
   season: 20
   episode: 14
   release_date:
+  directors:
+  writers:
   description: The Simpsons travel to Ireland, where Homer and Grampa purchase an
     old pub that's fallen on hard times.
   disneyplus_id: 788f0f9a-99a6-44a5-b575-b65feeee9152
@@ -150,6 +178,8 @@ episodes:
   season: 20
   episode: 15
   release_date:
+  directors:
+  writers:
   description: When their marriage license turns out to be invalid, Homer asks Marge
     to marry him in style.  But when Homer mysteriously disappears just before the
     wedding, Bart and Lisa search for answers.
@@ -161,6 +191,8 @@ episodes:
   season: 20
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Moe meets a beautiful woman in an Internet chat room who turns out
     to be three feet tall; Homer tries to spend more time with Maggie.
   disneyplus_id: 5c605010-e2c7-442f-afc8-2ef9e6845e94
@@ -171,6 +203,8 @@ episodes:
   season: 20
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Bart dumps Milhouse in favor of a cute girl who volunteers her time
     at the retirement home; Lisa is prescribed antidepressants after she reads predictions
     about what Springfield will look like in 50 years.
@@ -182,6 +216,8 @@ episodes:
   season: 20
   episode: 18
   release_date:
+  directors:
+  writers:
   description: As a result of Homer's "helicopter parenting," Lisa employs a trendy
     technique for boosting her popularity, while Bart enters a balsa-wood model-building
     contest; Marge discovers a sauna in the basement.
@@ -193,6 +229,8 @@ episodes:
   season: 20
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Homer and Marge rent an apartment in tony Waverly Hills so Bart and
     Lisa can attend a better elementary school.
   disneyplus_id: 236d3723-c091-4c65-9147-fd39dd2183bb
@@ -203,6 +241,8 @@ episodes:
   season: 20
   episode: 20
   release_date:
+  directors:
+  writers:
   description: 'As Marge and Lisa have their nails done, they spin four tales involving
     famous women: Queen Elizabeth, Snow White, Lady Macbeth and Ayn Rand.'
   disneyplus_id: 1cf52f6d-4c3e-45d1-81d0-294bb257f1c8
@@ -213,6 +253,8 @@ episodes:
   season: 20
   episode: 21
   release_date:
+  directors:
+  writers:
   description: Springfield grapples with an immigration problem when the economy of
     nearby Ogdenville collapses.
   disneyplus_id: 527aec32-aac9-47c3-ac7e-72509b9a9fe7
