--- a/episodes/season_theatrical.yml
+++ b/episodes/season_theatrical.yml
@@ -4,6 +4,8 @@ episodes:
   season: 25
   episode: 25
   release_date:
+  directors:
+  writers:
   description: 'A theatrical short that premiered July 13, 2012, attached to the theatrical
     release of Ice Age: Continental Drift.  It was nominated for an Academy Award
     for Best Animated Short.'
@@ -15,6 +17,8 @@ episodes:
   season: 99
   episode: 1
   release_date:
+  directors:
+  writers:
   description: After Homer accidentally pollutes the town's water supply, Springfield is
     encased by a giant dome by the EPA and the Simpsons family are declared fugitives.
   disneyplus_id: f1d4d070-76e9-4889-94c2-c8883b2b875a
@@ -25,6 +29,8 @@ episodes:
   season: 99
   episode: 2
   release_date:
+  directors:
+  writers:
   description: The Simpsons host a Disney+ Day party and everyone is on the list... except
     Homer. With friends from across the service and music fit for a Disney princess,
     Plusaversary is Springfield’s event of the year.
@@ -36,6 +42,8 @@ episodes:
   season: 99
   episode: 3
   release_date:
+  directors:
+  writers:
   description: When Maggie Simpson is rescued by a cute young baby from playground peril, it's
     girl meets boy, girl loses boy, guess what happens next?
   disneyplus_id: f02f6d69-5f8d-4087-a8a8-e94bdc4015ec
@@ -46,6 +54,8 @@ episodes:
   season: 99
   episode: 4
   release_date:
+  directors:
+  writers:
   description: "Banished from Asgard once again, Loki must face his toughest opponents yet:
     the Simpsons and Springfield's mightiest heroes. The God of Mischief teams up with Bart
     Simpson in the ultimate crossover event paying tribute to the Marvel Cinematic Universe
@@ -58,6 +68,8 @@ episodes:
   season: 99
   episode: 5
   release_date:
+  directors:
+  writers:
   description: In a daycare far, far away... but still in Springfield, Maggie is on an epic
     quest for her stolen pacifier. Her adventure brings her face-to-face with young Padawans,
     Sith Lords, familiar droids, Rebel scum, and an ultimate battle against the Dark Side,
