--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -4,6 +4,8 @@ episodes:
   season: 3
   episode: 1
   release_date: 1991-09-19
+  directors:
+  writers:
   description: Homer is institutionalized after Bart fills out his sanity test.  A
     man who thinks he is Michael Jackson helps Bart write a song for Lisa when he
     forgets her birthday.
@@ -15,6 +17,8 @@ episodes:
   season: 3
   episode: 2
   release_date: 1991-09-26
+  directors:
+  writers:
   description: The Simpsons travel to the Nation's Capitol when Lisa becomes a semifinalist
     in an essay contest on patriotism.
   disneyplus_id: 30e6b625-ad02-4c52-ba41-571b68eee431
@@ -25,6 +29,8 @@ episodes:
   season: 3
   episode: 3
   release_date: 1991-10-03
+  directors:
+  writers:
   description: Ned Flanders opens a store for left-handed people and Homer is overjoyed
     when it performs poorly.
   disneyplus_id: bba00c31-32ab-4167-9990-d44ca856fb77
@@ -35,6 +41,8 @@ episodes:
   season: 3
   episode: 4
   release_date: 1991-10-10
+  directors:
+  writers:
   description: Bart fraternizes with a gang of mobsters and becomes the prime suspect
     when Principal Skinner mysteriously disappears.
   disneyplus_id: 062bfbc7-f1ac-4c7f-9ccc-bd2e96fd6da4
@@ -45,6 +53,8 @@ episodes:
   season: 3
   episode: 5
   release_date: 1991-10-17
+  directors:
+  writers:
   description: Homer becomes a hero when he averts a catastrophe at the power plant,
     but what is perceived as his skill of being a quick thinker is actually dumb luck.
   disneyplus_id: 03be2e07-7414-436a-9522-e697bd015483
@@ -55,6 +65,8 @@ episodes:
   season: 3
   episode: 6
   release_date: 1991-10-24
+  directors:
+  writers:
   description: Bart and Lisa scheme to reunite Krusty the Clown with his father, Rabbi
     Krustofsky, who disowned him for not carrying on the family tradition.
   disneyplus_id: 27977583-ce54-45e5-8c9e-3ea55d551a3e
@@ -65,6 +77,8 @@ episodes:
   season: 3
   episode: 7
   release_date: 1991-10-31
+  directors:
+  writers:
   description: The Simpsons eat too much candy on Halloween and experience nightmarish
     tales of horror while they sleep.
   disneyplus_id: 1d2183e7-f0c6-4b61-abd7-47688dccfd15
@@ -75,6 +89,8 @@ episodes:
   season: 3
   episode: 8
   release_date: 1991-11-07
+  directors:
+  writers:
   description: Homer realizes that he never shows Lisa the attention she deserves
     and buys her a pony.
   disneyplus_id: 9ce55c08-4635-4cc8-857c-081460a2480e
@@ -85,6 +101,8 @@ episodes:
   season: 3
   episode: 9
   release_date: 1991-11-14
+  directors:
+  writers:
   description: Realizing he has not been a good father to Bart, Homer aids his son
     in building a soap box racer.
   disneyplus_id: b1ecdef1-ffef-4cb1-b7cc-3980a258cc69
@@ -95,6 +113,8 @@ episodes:
   season: 3
   episode: 10
   release_date: 1991-11-21
+  directors:
+  writers:
   description: Homer gives Moe the recipe for a unique alcoholic drink, and when it
     turns into a sensation, Moe takes credit, and the profits, from its success.
   disneyplus_id: 796cd258-4056-43ab-9268-4932550f11f5
@@ -105,6 +125,8 @@ episodes:
   season: 3
   episode: 11
   release_date: 1991-12-05
+  directors:
+  writers:
   description: Homer is fired from his job when a German firm buys the power plant
     from Mr. Burns.
   disneyplus_id: dd37faf9-f191-4a97-99c4-2cf7e966e441
@@ -115,6 +137,8 @@ episodes:
   season: 3
   episode: 12
   release_date: 1991-12-26
+  directors:
+  writers:
   description: When Marge believes she may be pregnant, Homer recounts how Bart was
     born.
   disneyplus_id: e7a09c16-34cd-448d-89c8-3a7cd3f1db05
@@ -125,6 +149,8 @@ episodes:
   season: 3
   episode: 13
   release_date: 1992-01-23
+  directors:
+  writers:
   description: Using his Superstar Celebrity microphone, Bart tricks all of Springfield
     into believing that a child has fallen down a well.  But when he falls into the
     same well, Bart cannot get anyone to save him.
@@ -136,6 +162,8 @@ episodes:
   season: 3
   episode: 14
   release_date: 1992-01-23
+  directors:
+  writers:
   description: Lisa accurately predicts the winners of sporting events that Homer
     gambles on so she can be closer to her father.
   disneyplus_id: f4faa613-2619-484b-b9d5-84cb7907b60e
@@ -146,6 +174,8 @@ episodes:
   season: 3
   episode: 15
   release_date: 1992-02-06
+  directors:
+  writers:
   description: When Marge reaches the breaking point, she leaves for a much needed
     vacation, leaving the rest of the family to realize how much she does for them.
   disneyplus_id: affe697b-246e-4e2b-b314-86abb18f51f3
@@ -156,6 +186,8 @@ episodes:
   season: 3
   episode: 16
   release_date: 1992-02-13
+  directors:
+  writers:
   description: When Bart discovers that his divorced teacher, Mrs. Krabappel, has
     placed a "personals" ad in the local newspaper, he decides to create fake correspondence.
   disneyplus_id: 8e541791-0374-4447-92d5-427e190347c0
@@ -166,6 +198,8 @@ episodes:
   season: 3
   episode: 17
   release_date: 1992-02-20
+  directors:
+  writers:
   description: Mr. Burns bets one million dollars that his power plant's softball
     team will win the championship, then hires professional baseball players to be
     members of the team.
@@ -177,6 +211,8 @@ episodes:
   season: 3
   episode: 18
   release_date: 1992-02-27
+  directors:
+  writers:
   description: Bart finds new respect for the law and Lisa hangs out with the wrong
     crowd after they both take career aptitude tests.
   disneyplus_id: 84689699-9a61-4873-9e97-b92fdfdfd912
@@ -187,6 +223,8 @@ episodes:
   season: 3
   episode: 19
   release_date: 1992-03-12
+  directors:
+  writers:
   description: The Simpsons must choose between frills and their dog when Santa's
     Little Helper needs an expensive operation to save its life.
   disneyplus_id: 2d3ca633-e681-408d-b43a-17d34c4e3429
@@ -197,6 +235,8 @@ episodes:
   season: 3
   episode: 20
   release_date: 1992-03-26
+  directors:
+  writers:
   description: Homer becomes the manager of a beautiful Country Western singer.
   disneyplus_id: dd81dd22-a6d1-490b-9e4d-86b5bf64e2b0
   simpsonsworld_id: 272215619762
@@ -206,6 +246,8 @@ episodes:
   season: 3
   episode: 21
   release_date: 1992-04-09
+  directors:
+  writers:
   description: To Bart's horror, Selma announces that her husband-to-be is none other
     than Sideshow Bob.
   disneyplus_id: d5a7bef2-e845-4439-916e-121bb33838c4
@@ -216,6 +258,8 @@ episodes:
   season: 3
   episode: 22
   release_date: 1992-04-23
+  directors:
+  writers:
   description: Bart attends a Spinal Tap concert.  Otto loses his job driving the
     school bus and moves in with the Simpsons.
   disneyplus_id: 97b16e5f-ef0a-4bdb-b113-e8ceb248217a
@@ -226,6 +270,8 @@ episodes:
   season: 3
   episode: 23
   release_date: 1992-05-07
+  directors:
+  writers:
   description: Bart becomes jealous when Milhouse falls for a girl who transferred
     to their school.
   disneyplus_id: 44f88f5f-ef09-4102-a975-4cc963938ec3
@@ -236,6 +282,8 @@ episodes:
   season: 3
   episode: 24
   release_date: 1992-08-27
+  directors:
+  writers:
   description: 'Herb Powell asks his brother Homer to let him borrow $2000 to develop
     a new invention: a translator of baby gibberish.'
   disneyplus_id: 7262519a-bba5-44c2-a547-2c812ed2541d
