--- a/episodes/season_09.yml
+++ b/episodes/season_09.yml
@@ -4,6 +4,8 @@ episodes:
   season: 9
   episode: 1
   release_date:
+  directors:
+  writers:
   description: The Simpsons journey to New York City to retrieve the family car.
   disneyplus_id: 1f47b3ec-a412-4546-a073-8361d53384cf
   simpsonsworld_id: 436516931611
@@ -13,6 +15,8 @@ episodes:
   season: 9
   episode: 2
   release_date:
+  directors:
+  writers:
   description: A stranger claims that Principal Skinner is an impostor.
   disneyplus_id: 84e0db92-6db1-435b-a2dd-b58d76dc31fc
   simpsonsworld_id: 436505155662
@@ -22,6 +26,8 @@ episodes:
   season: 9
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Homer and Marge recount how Lisa got her saxophone.
   disneyplus_id: 53c81aff-a0d3-4989-b86f-62d92ddac2e8
   simpsonsworld_id: 279743555749
@@ -31,6 +37,8 @@ episodes:
   season: 9
   episode: 4
   release_date:
+  directors:
+  writers:
   description: Homer battles killer mutants after Springfield is destroyed by a nuclear
     blast; a matter- transportation device melds Bart with a housefly; in Colonial
     times, Marge is accused of being a witch.
@@ -42,6 +50,8 @@ episodes:
   season: 9
   episode: 5
   release_date:
+  directors:
+  writers:
   description: Homer purchases a handgun to protect his family.
   disneyplus_id: aa731556-7526-4c2a-94b5-55b5c202ff95
   simpsonsworld_id: 302813251779
@@ -51,6 +61,8 @@ episodes:
   season: 9
   episode: 6
   release_date:
+  directors:
+  writers:
   description: Homer becomes coach of the Springfield Pee Wee Football team and appoints
     Bart as starting quarterback.
   disneyplus_id: 1b249ab0-7a7a-464f-afb4-748c0b961764
@@ -61,6 +73,8 @@ episodes:
   season: 9
   episode: 7
   release_date:
+  directors:
+  writers:
   description: In an effort to annul an arranged marriage, Apu tells his mother he
     wed Marge.
   disneyplus_id: bbdad28f-868c-4a4a-91b8-d5e2eab7ecb0
@@ -71,6 +85,8 @@ episodes:
   season: 9
   episode: 8
   release_date:
+  directors:
+  writers:
   description: Townspeople believe Lisa has unearthed the fossilized remains of an
     angel.
   disneyplus_id: 2099bcea-1439-42de-a3ac-05beb85d364a
@@ -81,6 +97,8 @@ episodes:
   season: 9
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Marge gets a job with a realty firm, but her honesty costs her lucrative
     sales.  Homer purchases a 60s hot-rod convertible at a police auction.
   disneyplus_id: e940d201-0f89-4f0d-ac75-b4f075887dc3
@@ -91,6 +109,8 @@ episodes:
   season: 9
   episode: 10
   release_date:
+  directors:
+  writers:
   description: People throughout Springfield open their hearts and wallets after Bart
     claims the family's Christmas presents were stolen by a burglar.
   disneyplus_id: e63b2ce3-d2a4-4490-874c-82a7d8ec0dc6
@@ -101,6 +121,8 @@ episodes:
   season: 9
   episode: 11
   release_date:
+  directors:
+  writers:
   description: The Simpsons recall their many musical moments from seasons past.
   disneyplus_id: 010cfd47-8910-4edc-9bb6-e068c9ca3429
   simpsonsworld_id: 294808131518
@@ -110,6 +132,8 @@ episodes:
   season: 9
   episode: 12
   release_date:
+  directors:
+  writers:
   description: A carnival worker and his son move in with the Simpsons after Homer
     costs them their jobs.
   disneyplus_id: 66a225cb-1385-434a-aa31-330547596f0f
@@ -120,6 +144,8 @@ episodes:
   season: 9
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Marge tries her hand at deprogramming after her family is brainwashed
     by a religious cult.
   disneyplus_id: f7bbd9ed-04b9-40a8-89b3-13b680238710
@@ -130,6 +156,8 @@ episodes:
   season: 9
   episode: 14
   release_date:
+  directors:
+  writers:
   description: Bart, Lisa and their classmates fight for survival when they become
     stranded on a remote island.  Homer starts his own business on the Internet.
   disneyplus_id: d0aa607e-1140-438a-ac60-932640cb8ce0
@@ -140,6 +168,8 @@ episodes:
   season: 9
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Krusty shuns his old routines in favor of edgier material and suddenly
     becomes the hottest comic in show business.
   disneyplus_id: 0697ad05-0c9e-4e51-9fd3-6784d6b1f93f
@@ -150,6 +180,8 @@ episodes:
   season: 9
   episode: 16
   release_date:
+  directors:
+  writers:
   description: When Moe goes broke romancing his new love, he enlists Homer in a scheme
     to collect on an insurance policy.
   disneyplus_id: daa5afa4-7b1d-436d-a06c-16cd940e8cad
@@ -160,6 +192,8 @@ episodes:
   season: 9
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Lisa fears she is genetically predisposed to lose her intelligence.
     Apu uses a frozen Jasper as a tourist attraction.
   disneyplus_id: a8995f58-eb52-4194-986a-0dd838a8402f
@@ -170,6 +204,8 @@ episodes:
   season: 9
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Bart is appalled when Marge pairs him with Ralph Wiggum.
   disneyplus_id: 75efdcf2-b757-41fc-97eb-e26a4f226b70
   simpsonsworld_id: 299639875678
@@ -179,6 +215,8 @@ episodes:
   season: 9
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Homer becomes the captain of a Navy submarine.  Bart gets his ear pierced.
   disneyplus_id: 8adf7684-75d6-411f-a29c-ccf717e3a34c
   simpsonsworld_id: 302809667837
@@ -188,6 +226,8 @@ episodes:
   season: 9
   episode: 20
   release_date:
+  directors:
+  writers:
   description: When a tax audit lands him in hot water, Homer goes undercover for
     the government and attempts to retrieve a trillion dollar note from Mr. Burns.
   disneyplus_id: 7e591366-4790-471b-aa26-33d9a164bfbd
@@ -198,6 +238,8 @@ episodes:
   season: 9
   episode: 21
   release_date:
+  directors:
+  writers:
   description: Bart attempts to upstage Lisa when the pair co-host a children's news
     program.  Homer obtains a helper monkey.
   disneyplus_id: fd8b912e-c01d-4a97-aadd-1515a9409321
@@ -208,6 +250,8 @@ episodes:
   season: 9
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Homer enters the race for Sanitation Commissioner after garbage men
     refuse to collect his trash.
   disneyplus_id: 6da3fbc3-cf7f-4bff-8e00-5ce4760aceff
@@ -218,6 +262,8 @@ episodes:
   season: 9
   episode: 23
   release_date:
+  directors:
+  writers:
   description: After improving his physique, Homer attempts to climb a treacherous
     mountain.
   disneyplus_id: ed68b15a-036d-4360-9d1b-023894a48cfd
@@ -228,6 +274,8 @@ episodes:
   season: 9
   episode: 24
   release_date:
+  directors:
+  writers:
   description: Lisa gets lost in an unfamiliar part of town while searching for a
     museum. Bart adheres novelties to his face only to discover they cannot be removed.
   disneyplus_id: 9263db95-a448-4113-a53b-4b797a60d35f
@@ -238,6 +286,8 @@ episodes:
   season: 9
   episode: 25
   release_date:
+  directors:
+  writers:
   description: Homer and Marge discover the secret to reigniting their sex life. Bart
     and Lisa hunt for hidden treasure using Grampa's old mine sweeper.
   disneyplus_id: 35b270b9-47d8-4e68-af5f-3f69e2266355
