--- a/episodes/season_13.yml
+++ b/episodes/season_13.yml
@@ -4,6 +4,8 @@ episodes:
   season: 13
   episode: 1
   release_date:
+  directors:
+  writers:
   description: On Halloween, the Simpsons are menaced by a computer controlling an
     automated house; a gypsy curses Homer; Lisa and Bart find themselves in a Harry
     Potter-like adventure.
@@ -15,6 +17,8 @@ episodes:
   season: 13
   episode: 2
   release_date:
+  directors:
+  writers:
   description: A stern judge rules that Homer and Bart are to be tethered together,
     and later, Homer and Marge are declared bad parents and placed in old-fashioned
     wooden stocks.
@@ -26,6 +30,8 @@ episodes:
   season: 13
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Moe turns the bar into a pretentious hang-out for Springfield's 'beautiful
     people,' forcing Homer to start a bar of his own inside his garage.
   disneyplus_id: 7aa1e458-2d84-462b-944e-fdea6ba7d0c9
@@ -36,6 +42,8 @@ episodes:
   season: 13
   episode: 4
   release_date:
+  directors:
+  writers:
   description: When Mr. Burns falls for an attractive traffic cop many years his junior,
     he enlists Homer's help in romancing her.
   disneyplus_id: 615f5d50-9053-4a52-9d28-7ee007c4fd6f
@@ -46,6 +54,8 @@ episodes:
   season: 13
   episode: 5
   release_date:
+  directors:
+  writers:
   description: When placed under hypnosis, Homer struggles with a repressed memory-which
     leads to a shocking discovery.
   disneyplus_id: b3a80310-5278-48b4-bcdf-7640e6ef6d76
@@ -56,6 +66,8 @@ episodes:
   season: 13
   episode: 6
   release_date:
+  directors:
+  writers:
   description: As Christmas approaches... Lisa searches for a new religion after Mr.
     Burns takes over her church and runs it like a corporation.
   disneyplus_id: 1e576683-d666-4616-ade0-e434176e3d27
@@ -66,6 +78,8 @@ episodes:
   season: 13
   episode: 7
   release_date:
+  directors:
+  writers:
   description: A social worker attempts to transform the family into a functional,
     cooperative unit... until Homer's other wife shows up unexpectedly.
   disneyplus_id: 6d9cec94-bed0-4dba-8171-af100d77e381
@@ -76,6 +90,8 @@ episodes:
   season: 13
   episode: 8
   release_date:
+  directors:
+  writers:
   description: After Springfield wins the title of World's Fattest Town, Marge launches
     an anti-sugar crusade, and sugar is banned from the city.
   disneyplus_id: 065b54df-f644-47c3-a829-38392e7d5a42
@@ -86,6 +102,8 @@ episodes:
   season: 13
   episode: 9
   release_date:
+  directors:
+  writers:
   description: When Homer has to have his jaw wired shut, he discovers the joys of
     listening, but Marge finds that a well-behaved Homer isn't what she really wanted.
   disneyplus_id: cebdc2b8-429b-450f-ad2a-3d9f892c9a7a
@@ -96,6 +114,8 @@ episodes:
   season: 13
   episode: 10
   release_date:
+  directors:
+  writers:
   description: Marge's ex-boyfriend, now one of the world's richest men, offers Homer
     a million dollars in exchange for a weekend with her, to see what 'might have
     been.'
@@ -107,6 +127,8 @@ episodes:
   season: 13
   episode: 11
   release_date:
+  directors:
+  writers:
   description: Bart travels to Canada to win back the heart of Rainier Wolfcastle's
     daughter after she runs off with Milhouse.
   disneyplus_id: ab9a7c27-a859-433d-9cae-ee11d5561f5a
@@ -117,6 +139,8 @@ episodes:
   season: 13
   episode: 12
   release_date:
+  directors:
+  writers:
   description: Bart befriends an aging movie cowboy who begins drinking heavily when
     asked to appear on Krusty's television show.
   disneyplus_id: ca10983a-ae5b-4017-86f2-8a869f1224ae
@@ -127,6 +151,8 @@ episodes:
   season: 13
   episode: 13
   release_date:
+  directors:
+  writers:
   description: In an effort to win a date with a beautiful new resident at the nursing
     home, Grampa gets his driver's license back... and gives chase when the object
     of his affection leaves for Branson, Missouri.
@@ -138,6 +164,8 @@ episodes:
   season: 13
   episode: 14
   release_date:
+  directors:
+  writers:
   description: 'The Simpsons appear as characters in three classic tales: Homer as
     Odysseus leads the Greek army; Bart as Hamlet attempts to avenge the death of
     his father; Lisa as Joan of Arc pits the French against the English.'
@@ -149,6 +177,8 @@ episodes:
   season: 13
   episode: 15
   release_date:
+  directors:
+  writers:
   description: When the Simpsons fly to Brazil to locate a missing orphan that Lisa
     has been sponsoring, Homer ends up getting kidnapped.
   disneyplus_id: 81943c2d-1289-4956-b555-83e291444b74
@@ -159,6 +189,8 @@ episodes:
   season: 13
   episode: 16
   release_date:
+  directors:
+  writers:
   description: When Homer is attacked by crows, he's prescribed medical marijuana
     to help relieve the pain... leading Burns to promote his happy employee to executive
     vice president of the power plant.
@@ -170,6 +202,8 @@ episodes:
   season: 13
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Homer is roasted at the Springfield Friar's Club, leading to recollections
     from the past.  But the fate of the Earth hangs in the balance when aliens Kang
     and Kodos make an unexpected appearance.
@@ -181,6 +215,8 @@ episodes:
   season: 13
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Bart launches a comic book with an angry Homer as the main character,
     and when it proves a huge success, Homer vows to give up getting angry for Lent.
   disneyplus_id: fe5e230c-1c35-4b6d-bf16-5aa29d39a7f3
@@ -191,6 +227,8 @@ episodes:
   season: 13
   episode: 19
   release_date:
+  directors:
+  writers:
   description: When Manjula kicks Apu out of the house for cheating on her, Homer
     and Marge search for a way to reunite the couple.
   disneyplus_id: a5adee2e-50dc-431a-8419-42734f3c1f74
@@ -201,6 +239,8 @@ episodes:
   season: 13
   episode: 20
   release_date:
+  directors:
+  writers:
   description: Lisa is overjoyed when she befriends some college students; Bart becomes
     a boy-in-a-plastic-bubble after he's bitten by a Chinese mosquito.
   disneyplus_id: 9d9a1112-0d2c-47c0-b92c-6fb298dd107d
@@ -211,6 +251,8 @@ episodes:
   season: 13
   episode: 21
   release_date:
+  directors:
+  writers:
   description: Homer and Marge become murder suspects after an elderly shut-in the
     couple befriended is found dead.
   disneyplus_id: 2ade0011-4a83-40a1-b5ff-9b47e3cbe4b3
@@ -221,6 +263,8 @@ episodes:
   season: 13
   episode: 22
   release_date:
+  directors:
+  writers:
   description: When Wiggum and his men prove ineffective in controlling a citywide
     riot, townspeople begin to feel unsafe... until Homer forms his own police force.
   disneyplus_id: 7d8a03ea-c828-488a-ad85-258dd82ce9ca
