--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -4,6 +4,8 @@ episodes:
   season: 25
   episode: 1
   release_date:
+  directors:
+  writers:
   description: When Homer returns from a Nuclear Workers Convention and begins behaving
     strangely, Lisa worries that her father has been brainwashed and is now part of
     a terrorist plot to blow up the power plant.
@@ -15,6 +17,8 @@ episodes:
   season: 25
   episode: 2
   release_date:
+  directors:
+  writers:
   description: In three terrifying Halloween tales, Bart, Lisa and Maggie receive
     a visit from The Fat in the Hat; when Bart is decapitated, his head is sewn onto
     Lisa's body; Homer plots to kill Moe at a circus freak show.
@@ -26,6 +30,8 @@ episodes:
   season: 25
   episode: 3
   release_date:
+  directors:
+  writers:
   description: A Springfield funeral prompts Marge, Kent Brockman, Homer and Mr. Burns
     to reexamine a crucial decision in their lives one that has brought them the most
     regret.
@@ -37,6 +43,8 @@ episodes:
   season: 25
   episode: 4
   release_date:
+  directors:
+  writers:
   description: After experiencing a midlife crisis, Homer reaches out to an old pen
     pal; when a cheating scandal rocks Springfield Elementary, Lisa establishes an
     honor code.
@@ -48,6 +56,8 @@ episodes:
   season: 25
   episode: 5
   release_date:
+  directors:
+  writers:
   description: Homer gets trapped in an elevator with a pregnant woman and helps deliver
     her baby; Lisa helps underpaid cheerleaders organize so they can demand a salary
     increase from a greedy football team owner.
@@ -59,6 +69,8 @@ episodes:
   season: 25
   episode: 6
   release_date:
+  directors:
+  writers:
   description: Lisa is elated to befriend Isabel, a smart new student at school, only
     to realize that she and Isabel are on opposite sides of the political spectrum.
   disneyplus_id: 4b47c46b-cbda-4ecd-8715-94935ca69273
@@ -69,6 +81,8 @@ episodes:
   season: 25
   episode: 7
   release_date:
+  directors:
+  writers:
   description: Bart seeks revenge after Skinner prevents him from attending a school
     field trip aboard a submarine; Lisa suggests to the financially-strapped Krusty
     that he sell the foreign rights to his television show.
@@ -80,6 +94,8 @@ episodes:
   season: 25
   episode: 8
   release_date:
+  directors:
+  writers:
   description: As Christmas approaches, Marge transforms the house into a bed and
     breakfast after Springfield becomes the only town in America to receive snowfall;
     Lisa vows to give her loved ones modest gifts that come from the heart.
@@ -91,6 +107,8 @@ episodes:
   season: 25
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Homer is put on trial after the FBI catches him illegally downloading
     movies from the Internet.
   disneyplus_id: 0c9550cd-8044-4efe-8eed-aece092047f6
@@ -101,6 +119,8 @@ episodes:
   season: 25
   episode: 10
   release_date:
+  directors:
+  writers:
   description: The Comic Book Guy marries a Japanese woman, only to discover that
     the woman's father disapproves of the union.
   disneyplus_id: c26f25f7-d8d3-4ea0-a62a-bcaaa8688b3f
@@ -111,6 +131,8 @@ episodes:
   season: 25
   episode: 11
   release_date:
+  directors:
+  writers:
   description: Homer uses augmented reality glasses to spy on Marge; Nelson demands
     a Valentine's Day card from Bart.
   disneyplus_id: 0c4e2f05-97c8-46fd-9699-6f44940717b7
@@ -121,6 +143,8 @@ episodes:
   season: 25
   episode: 12
   release_date:
+  directors:
+  writers:
   description: Sideshow Bob genetically alters his DNA, giving him superhuman strength;
     Marge volunteers as a teen abstinence counselor.
   disneyplus_id: 3afb3c6d-f176-4867-a1d1-c59758d9352b
@@ -131,6 +155,8 @@ episodes:
   season: 25
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Bart befriends a fellow student and falconry expert, only to discover
     that the boy suffers from mental illness.
   disneyplus_id: 9afafaa3-fa10-489b-9b30-8e95371eb8ac
@@ -141,6 +167,8 @@ episodes:
   season: 25
   episode: 14
   release_date:
+  directors:
+  writers:
   description: When the Simpsons allow members of the retirement community to move
     in with them, Marge worries that Homer is picking up their habits and is turning
     into an old man; a gang of bullies accepts Bart as one of their own.
@@ -152,6 +180,8 @@ episodes:
   season: 25
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Homer convinces Marge to sell a painting that was purchased from Milhouse's
     parents at a yard sale, a painting that turns out to be worth a great deal of
     money.
@@ -163,6 +193,8 @@ episodes:
   season: 25
   episode: 16
   release_date:
+  directors:
+  writers:
   description: After Lisa delivers a school report on why her father is her hero,
     Homer is tapped to referee World Cup soccer in Brazil.
   disneyplus_id: 7c3c7706-d070-4262-b4d6-21ce7e22899b
@@ -173,6 +205,8 @@ episodes:
   season: 25
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Lisa falls for a competitive eater who subconsciously reminds her of
     Homer; after Bart hides Jailbird from the police, he begins receiving stolen gifts.
   disneyplus_id: 6d255409-bf57-40b6-bbc1-307bebde5538
@@ -183,6 +217,8 @@ episodes:
   season: 25
   episode: 18
   release_date:
+  directors:
+  writers:
   description: Thirty years in the future, Bart tries to reestablish his relationship
     with his estranged wife, Jenda; Lisa thinks Milhouse is far more interesting after
     he's bitten by a zombie.
@@ -194,6 +230,8 @@ episodes:
   season: 25
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Bart uses voodoo in an attempt to get rid of an art teacher, but when
     the teacher ends up getting pregnant, word spreads that Bart can help couples
     conceive.
@@ -205,6 +243,8 @@ episodes:
   season: 25
   episode: 20
   release_date:
+  directors:
+  writers:
   description: After Homer bonds with Lisa, Homer's imagination creates a world in
     which everything is made of Lego toys.
   disneyplus_id: 44ece42c-b05f-4368-91c4-ad72a5d23f61
@@ -215,6 +255,8 @@ episodes:
   season: 25
   episode: 21
   release_date:
+  directors:
+  writers:
   description: As Mother's Day approaches, after Homer and Marge's attempt to befriend
     other couples fails miserably, Lisa discovers a shocking secret about her new
     best friend.
@@ -226,6 +268,8 @@ episodes:
   season: 25
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Bart is overcome with guilt after an act of cowardice leads to his
     winning a school race; Homer vows to hold his own Fourth of July fireworks display
     after Springfield's holiday celebration is canceled.
