--- a/episodes/season_27.yml
+++ b/episodes/season_27.yml
@@ -4,6 +4,8 @@ episodes:
   season: 27
   episode: 1
   release_date:
+  directors:
+  writers:
   description: Marge decides it's finally time to separate from Homer, and quickly
     moves on with her life. Homer is initially devastated, but soon stumbles into
     a romance with a younger woman.
@@ -15,6 +17,8 @@ episodes:
   season: 27
   episode: 2
   release_date:
+  directors:
+  writers:
   description: A celebrity television chef challenges Homer to a barbecue cook-off.
     But before the competition, Homer's new, prized barbecue grill is stolen.
   disneyplus_id: b852e4d5-f1d0-4952-b7a7-adca126e73cc
@@ -25,6 +29,8 @@ episodes:
   season: 27
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Patty and Selma try to quit smoking, but Patty moves in with the Simpsons
     when Selma takes it up again. Meanwhile, Maggie goes on an adventure with some
     local creatures.
@@ -36,6 +42,8 @@ episodes:
   season: 27
   episode: 4
   release_date:
+  directors:
+  writers:
   description: The Simpsons are proud to be the most festively decorated house on
     the block. But when Lisa is traumatized at Krustyland Horror Night, she feels
     she cannot handle Halloween anymore.
@@ -47,6 +55,8 @@ episodes:
   season: 27
   episode: 5
   release_date:
+  directors:
+  writers:
   description: After killing Bart, Sideshow Bob doesn't know what to do with himself;
     Homer wakes up with short-term memory loss; Because of radiation, Lisa, Bart and
     Milhouse gain super-powers.
@@ -58,6 +68,8 @@ episodes:
   season: 27
   episode: 6
   release_date:
+  directors:
+  writers:
   description: Lisa makes a new friend at school - Harper, who happens to be super-rich,
     while Homer makes friends with Harper's dad and sets out to continue living the
     good life when Lisa decides to end the friendship.
@@ -69,6 +81,8 @@ episodes:
   season: 27
   episode: 7
   release_date:
+  directors:
+  writers:
   description: Broadway legend Laney Fontaine transforms Lisa into a show-biz kid
     after Homer loses her chance at band camp.
   disneyplus_id: 9d522c72-2956-45f6-b114-9f06861d3c33
@@ -79,6 +93,8 @@ episodes:
   season: 27
   episode: 8
   release_date:
+  directors:
+  writers:
   description: Lisa tries to restore the reputation of a forgotten Springfield female
     inventor, while Bart takes full advantage of a diagnosis that he is a sociopath.
   disneyplus_id: 30657536-4a9f-4bcc-8837-f0789b3d6203
@@ -89,6 +105,8 @@ episodes:
   season: 27
   episode: 9
   release_date:
+  directors:
+  writers:
   description: A tale of Bart's journey from youth to adulthood, where he is constantly
     in search of approval from his father and in the shadow of his more-successful
     younger sister.
@@ -100,6 +118,8 @@ episodes:
   season: 27
   episode: 10
   release_date:
+  directors:
+  writers:
   description: When Homer loses his job due to Marge's social media post, he begins
     working as a dishwasher at a Greek restaurant. Meanwhile, Lisa creates an app
     that can predict the effect any post on social media will have.
@@ -111,6 +131,8 @@ episodes:
   season: 27
   episode: 11
   release_date:
+  directors:
+  writers:
   description: Bart and Principal Skinner battle over the affection of Bart's new
     teacher, and a new milk-based product that Homer buys from the Kwik-E-Mart causes
     big changes in Bart and Lisa.
@@ -122,6 +144,8 @@ episodes:
   season: 27
   episode: 12
   release_date:
+  directors:
+  writers:
   description: Apu's nephew makes big changes when he takes over the Kwik-E-Mart business,
     and Bart decides that he's through with being bad after his latest prank spirals
     out of control.
@@ -133,6 +157,8 @@ episodes:
   season: 27
   episode: 13
   release_date:
+  directors:
+  writers:
   description: Professor Frink's new invention turns him into a ladies' man, while
     a new pill at the Springfield Retirement Castle causes Grandpa to hallucinate
     back to his happiest moments.
@@ -144,6 +170,8 @@ episodes:
   season: 27
   episode: 14
   release_date:
+  directors:
+  writers:
   description: Lisa tries to launch the career of a homeless Appalachian folk singer,
     but Bart warns her that she will just let her down. Meanwhile, Homer tries to
     rescue the cat, who is trapped in the walls of the house.
@@ -155,6 +183,8 @@ episodes:
   season: 27
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Lisa takes a job as veterinarian's assistant, but soon lets the responsibilities
     of the job get to her head. Meanwhile, Marge decides to take a job as a crime
     scene cleaner.
@@ -166,6 +196,8 @@ episodes:
   season: 27
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Lisa signs up for an opportunity to be part of a mission to colonize
     Mars in ten years, and Homer's strategy to use reverse psychology to talk her
     out of it backfires.
@@ -177,6 +209,8 @@ episodes:
   season: 27
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Homer tries to raise Smithers' spirits by finding him a man, and Lisa
     gets the lead in the school production of "Casablanca" alongside a new male student,
     sparking Millhouse's jealousy.
@@ -188,6 +222,8 @@ episodes:
   season: 27
   episode: 18
   release_date:
+  directors:
+  writers:
   description: After Lisa overhears Marge say that she doesn't like Lisa's jazz music,
     Marge takes Lisa on a trip to Capitol City to regain her friendship. Meanwhile,
     Bart uses Maggie as his new partner in crime for his practical jokes.
@@ -199,6 +235,8 @@ episodes:
   season: 27
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Maggie will not go to sleep, so Homer tells her a bedtime story about
     when the Simpsons and the Flanders went together to the Grand Canyon.
   disneyplus_id: b9dc9ea5-988b-4276-ae71-da9e2bdf0431
@@ -209,6 +247,8 @@ episodes:
   season: 27
   episode: 20
   release_date:
+  directors:
+  writers:
   description: After promising Marge the trip of a lifetime, Homer makes a deal with
     a travel agent to be a courier of a top-secret briefcase in exchange for a discounted
     family vacation to Paris.
@@ -220,6 +260,8 @@ episodes:
   season: 27
   episode: 21
   release_date:
+  directors:
+  writers:
   description: While trying to overcome a fear of public speaking, Homer creates an
     improv comedy troupe. Meanwhile, Marge rebuilds Bart's treehouse, but gets no
     thanks from him. Homer later appears live to answer phoned in questions.
@@ -231,6 +273,8 @@ episodes:
   season: 27
   episode: 22
   release_date:
+  directors:
+  writers:
   description: Marge lets Bart go to the park alone because he's too irritating, then
     she ends up getting arrested for leaving him unsupervised.
   disneyplus_id: f4578a6f-2a92-4e49-82a4-1a37789ddbfd
