--- a/episodes/season_28.yml
+++ b/episodes/season_28.yml
@@ -4,6 +4,8 @@ episodes:
   season: 28
   episode: 1
   release_date:
+  directors:
+  writers:
   description: Mr. Burns puts on a variety show at the Springfield Bowl.
   disneyplus_id: 27983e4e-5a9b-49a6-ad4d-773b53d6dbc5
   simpsonsworld_id: 1066704963871
@@ -13,6 +15,8 @@ episodes:
   season: 28
   episode: 2
   release_date:
+  directors:
+  writers:
   description: Homer finds a new friend in a woman who acts just like him when Mr.
     Burns hires the other Simpsons as his live-in virtual reality family.
   disneyplus_id: c5ae8a57-bdea-435b-b4c7-4febd43dfc33
@@ -23,6 +27,8 @@ episodes:
   season: 28
   episode: 3
   release_date:
+  directors:
+  writers:
   description: Homer takes the family on a "hate-cation" to Boston after he catches
     Bart rooting for a rival football team.
   disneyplus_id: c7350a7a-9a33-48db-a40f-3b8b7893b677
@@ -33,6 +39,8 @@ episodes:
   season: 28
   episode: 4
   release_date:
+  directors:
+  writers:
   description: The children of Springfield fight to the death, Hunger Games style;
     Lisa's imaginary friend kills her real friends; Moe recruits Bart into his group
     of covert barfly agents.
@@ -44,6 +52,8 @@ episodes:
   season: 28
   episode: 5
   release_date:
+  directors:
+  writers:
   description: Bart and Lisa investigate Krusty's new candy; Marge helps Homer dress
     for a promotion; Kent Brockman struggles with the changing media world.
   disneyplus_id: 8633fa65-033e-4548-8c55-f65d0f1c633e
@@ -54,6 +64,8 @@ episodes:
   season: 28
   episode: 6
   release_date:
+  directors:
+  writers:
   description: Homer coaches the kids' lacrosse team with Kirk Van Houten, who disappears
     before the championship game, after Homer rants about him being a loser.
   disneyplus_id: 21ac2b78-d86b-49cf-8def-e73e7d3feb7d
@@ -64,6 +76,8 @@ episodes:
   season: 28
   episode: 7
   release_date:
+  directors:
+  writers:
   description: The Simpsons go to Cuba to get Grampa cheap medical care when the Retirement
     Castle and V.A. hospital are unable to solve his health problems.
   disneyplus_id: 86be2b24-f4ea-48ac-af2d-e03665f8c542
@@ -74,6 +88,8 @@ episodes:
   season: 28
   episode: 8
   release_date:
+  directors:
+  writers:
   description: Homer discovers an app that makes his life easier, while Grampa learns
     that he'll be a father again.
   disneyplus_id: 6122d981-dab6-448a-b5e2-8e045d49a1cb
@@ -84,6 +100,8 @@ episodes:
   season: 28
   episode: 9
   release_date:
+  directors:
+  writers:
   description: Homer is placed in a cast following a workplace accident, leading Marge
     to receive romance from an unexpected source; Lisa attempts to keep the peace
     as bus monitor.
@@ -95,6 +113,8 @@ episodes:
   season: 28
   episode: 10
   release_date:
+  directors:
+  writers:
   description: Krusty and his daughter spend Christmas with the Simpsons; Reverend
     Lovejoy seeks converts to boost attendance at church; A Christmas toy scares Maggie.
   disneyplus_id: 596be041-df7a-4f32-9209-f8734a20bf70
@@ -105,6 +125,8 @@ episodes:
   season: 28
   episode: 11
   release_date:
+  directors:
+  writers:
   description: A Japanese book on minimalism inspires Marge to adapt to a new way
     of living, so the Simpsons have to part with items that no longer bring them joy.
   disneyplus_id: e599bf8f-3846-4fc7-9ab9-a526ecd27ca6
@@ -115,6 +137,8 @@ episodes:
   season: 28
   episode: 14
   release_date:
+  directors:
+  writers:
   description: When all the fast food restaurants in Springfield become healthy, Homer
     turns to the last bastion of greasy food for comfort; Lisa must find a good news
     story when her school radio station is in jeopardy.
@@ -126,6 +150,8 @@ episodes:
   season: 28
   episode: 15
   release_date:
+  directors:
+  writers:
   description: Bart deals with his guilt of betraying Lisa; Homer is revealed to be
     a master chess player.
   disneyplus_id: 5f3df5ed-6614-4cb8-9db6-355f12fade31
@@ -136,6 +162,8 @@ episodes:
   season: 28
   episode: 16
   release_date:
+  directors:
+  writers:
   description: Bart and Lisa return home following a traumatic incident at Kamp Krusty,
     putting an end to Homer and Marge's sexual encounters.
   disneyplus_id: d455a9c4-d285-4430-b651-90c922210560
@@ -146,6 +174,8 @@ episodes:
   season: 28
   episode: 17
   release_date:
+  directors:
+  writers:
   description: Bart becomes a star basketball player at Springfield Elementary.
   disneyplus_id: 46ee771c-180a-457c-9681-7b4aa32ad4ec
   simpsonsworld_id: 1064044099732
@@ -155,6 +185,8 @@ episodes:
   season: 28
   episode: 18
   release_date:
+  directors:
+  writers:
   description: As Homer and Marge try a different parenting style on Bart, Grampa
     gives him a special watch.
   disneyplus_id: 9fd603e4-7497-4267-8d3e-1650797237ee
@@ -165,6 +197,8 @@ episodes:
   season: 28
   episode: 19
   release_date:
+  directors:
+  writers:
   description: Mr. Burns starts his own for-profit university and hires Homer as a
     professor.
   disneyplus_id: cc29a4a0-2c0f-4a33-a26b-942f5f56c788
@@ -175,6 +209,8 @@ episodes:
   season: 28
   episode: 20
   release_date:
+  directors:
+  writers:
   description: Bart befriends the grandmothers of Springfield.
   disneyplus_id: c1f79df3-116d-4923-859a-a1a964292108
   simpsonsworld_id: 1064046659522
@@ -184,6 +220,8 @@ episodes:
   season: 28
   episode: 21
   release_date:
+  directors:
+  writers:
   description: Moe helps Homer and Marge work on their marriage.
   disneyplus_id: f58f69c0-5491-493f-a4b5-46dbff81cebe
   simpsonsworld_id: 1064045635817
@@ -193,6 +231,8 @@ episodes:
   season: 28
   episode: 22
   release_date:
+  directors:
+  writers:
   description: The dogs of Springfield assert their dominance.
   disneyplus_id: 4a803d13-d79f-4a75-aaee-672938754207
   simpsonsworld_id: 1064045635799
@@ -202,6 +242,8 @@ episodes:
   season: 28
   episode: 1213
   release_date:
+  directors:
+  writers:
   description: Mr. Burns tries to relive his glory days, and crosses paths with a
     mysterious music mogul. After being conned by him and reduced to bankruptcy, Mr.
     Burns seeks revenge on the music producer.
